Rename column title output event to avoid conflicts with native events

--- a/src/ng2-smart-table/components/thead/thead.component.html
+++ b/src/ng2-smart-table/components/thead/thead.component.html
@@ -4,7 +4,7 @@
                             [isAllSelected]="isAllSelected"
                             [source]="source"
                             (sort)="sort.emit($event)"
-                            (change)="change.emit($event)"
+                            (titleChange)="titleChange.emit($event)"
                             (selectAllRows)="selectAllRows.emit($event)">
 </tr>
 
